
* Changed the startup scripts on Linux/UNIX to properly support systemd service
  installation.

* Changed the startup scripts on Windows to parallel the Linux/UNIX scripts,
  and converted them to PowerShell.

* Fixed an issue on UNIX/Linux platforms that prevented the Parliament daemon
  from receiving SIGTERM signals, making Parliament difficult to use in a
  Docker container.

* Reduced the volume of logging when Parliament is running in daemon mode.
  Log4j is now configured without a console logger, which means that the
  contents of the parliament.log file are not duplicated in the jsvc-log.txt
  file.  (When run at the command line, the logging configuration is unchanged,
  so you will still be able to see the log contents in real time in that case.)

* Numerous updates to bring in line with Java 11 & 15 (but still using Java 8)

* Added a User Guide section detailing how to secure a Parliament instance.

* Fixed an issue in the way Ivy dependencies on SLF4J were coded.

* Removed the obsolete support for Ivy publishing to a BBN-internal Ivy
  repository.

* Updated for Apple's clang 12 compiler

* Updated to Visual Studio 2019 (14.2)

* Updated to GeoTools version 24.2

* Updated to Boost 1.76.0

* Updated to Apache Commons Daemon 1.2.4

* Updated to Jetty 9.4.36


=================================================

Version 2.7.13 (5/6/2019):

----------------------   Important -- Please Read !!!   -----------------------
---                                                                         ---
---  The file format of version 2.7.13 is not backwards compatible with     ---
---  versions 2.7.11 and older.  To upgrade the data stored in a prior      ---
---  release of Parliament, please follow the procedure in Section 2.1.2,   ---
---  "Upgrading an Existing Installation", in the Parliament User Guide.    ---
---  This can be found in your Parliament download, and it is also          ---